--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 h1 {
+  font-family: cursive;
   text-align: center;
 }
 
@@ -6,4 +7,12 @@ h1 {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+p {
+  font-family: cursive;
+}
+
+.texto-centralizado {
+  text-align: center;
 }
